# callisto-jupiter

./: .gitignore  README.md  pyproject.toml  setup.ps1  setup.sh
callisto_jupiter/: __init__.py  __main__.py  agent.py  buffer.py  client.py  collectors.py  config.py
deploy/: callisto-jupiter.service  com.callistosignal.jupiter.plist  config.example.toml  windows-nssm.md
docs/superpowers/specs/: 2026-06-01-callisto-jupiter-exporter-design.md
tests/: test_agent.py  test_buffer.py  test_client.py  test_collectors.py  test_config.py
